# cvideoplayer

./: CMakeLists.txt  main.c
